--- a/styles/carCheckIcon.css
+++ b/styles/carCheckIcon.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'dokhtaroon';
-    src:  url('../public/assets/fonts/car.eot?gu585w');
-    src:  url('../public/assets/fonts/car.eot?gu585w#iefix') format('embedded-opentype'),
-    url('../public/assets/fonts/car.ttf?gu585w') format('truetype'),
-    url('../public/assets/fonts/car.woff?gu585w') format('woff'),
-    url('../public/assets/fonts/car.svg?gu585w#dokhtaroon') format('svg');
+    src:  url('../public/assets/fonts/icomoon.eot?gu585w');
+    src:  url('../public/assets/fonts/icomoon.eot?gu585w#iefix') format('embedded-opentype'),
+    url('../public/assets/fonts/icomoon.ttf?gu585w') format('truetype'),
+    url('../public/assets/fonts/icomoon.woff?gu585w') format('woff'),
+    url('../public/assets/fonts/icomoon.svg?gu585w#dokhtaroon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -12,7 +12,7 @@
 
 [class^="icon-"], [class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'car' !important;
+    font-family: 'icomoon' !important;
     speak: never;
     font-style: normal;
     font-weight: normal;
@@ -25,15 +25,6 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-Frame:before {
-    content: "\e915";
-}
-.icon-like-1-1:before {
-    content: "\e91e";
-}
-.icon-like-1-2:before {
-    content: "\e930";
-}
 .icon-Calender-1:before {
     content: "\e900";
 }
@@ -70,105 +61,117 @@
 .icon-Tick:before {
     content: "\e90b";
 }
-.icon-Wallet:before {
+.icon-Calender-11:before {
     content: "\e90c";
 }
-.icon-Calender-11:before {
+.icon-Calender-2:before {
     content: "\e90d";
 }
-.icon-Calender-2:before {
+.icon-Location-Tick1:before {
     content: "\e90e";
 }
-.icon-Location-Tick1:before {
+.icon-Location-Tick-1:before {
     content: "\e90f";
 }
-.icon-Location-Tick-1:before {
+.icon-arrow-down:before {
     content: "\e910";
 }
-.icon-arrow-down:before {
+.icon-arrow-right:before {
     content: "\e911";
 }
-.icon-arrow-right:before {
+.icon-arrow-up:before {
     content: "\e912";
 }
-.icon-arrow-up:before {
+.icon-discount-shape:before {
     content: "\e913";
 }
-.icon-discount-shape:before {
+.icon-like:before {
     content: "\e914";
 }
 .icon-link:before {
-    content: "\e916";
+    content: "\e915";
 }
 .icon-login:before {
-    content: "\e917";
+    content: "\e916";
 }
 .icon-smart-car:before {
-    content: "\e918";
+    content: "\e917";
 }
 .icon-star:before {
-    content: "\e919";
+    content: "\e918";
 }
 .icon-star-1:before {
-    content: "\e91a";
+    content: "\e919";
 }
 .icon-timer:before {
-    content: "\e91b";
+    content: "\e91a";
 }
 .icon-undo:before {
-    content: "\e91c";
+    content: "\e91b";
 }
 .icon-user-edit:before {
-    content: "\e91d";
+    content: "\e91c";
 }
 .icon-calendar:before {
-    content: "\e91f";
+    content: "\e91d";
 }
 .icon-dislike:before {
-    content: "\e920";
+    content: "\e91e";
 }
 .icon-location-slash:before {
-    content: "\e921";
+    content: "\e91f";
 }
 .icon-search-normal:before {
-    content: "\e922";
+    content: "\e920";
 }
 .icon-sms:before {
-    content: "\e923";
+    content: "\e921";
 }
 .icon-user:before {
-    content: "\e924";
+    content: "\e922";
 }
 .icon-Car:before {
+    content: "\e923";
+}
+.icon-Frame:before {
+    content: "\e924";
+}
+.icon-Group:before {
     content: "\e925";
 }
-.icon-mdi_google:before {
+.icon-like-1-2:before {
     content: "\e926";
 }
-.icon-mdi_google-1:before {
+.icon-mdi_google:before {
     content: "\e927";
 }
-.icon-mdi_google-2:before {
+.icon-mdi_google-1:before {
     content: "\e928";
 }
-.icon-mdi_google-3:before {
+.icon-mdi_google-2:before {
     content: "\e929";
 }
-.icon-mdi_google-4:before {
+.icon-mdi_google-3:before {
     content: "\e92a";
 }
-.icon-mdi_google-5:before {
+.icon-mdi_google-4:before {
     content: "\e92b";
 }
-.icon-mdi_google-6:before {
+.icon-mdi_google-5:before {
     content: "\e92c";
 }
-.icon-mdi_google-7:before {
+.icon-mdi_google-6:before {
     content: "\e92d";
 }
 .icon-share-1:before {
     content: "\e92e";
 }
-.icon-Vector:before {
+.icon-Vector-Stroke:before {
     content: "\e92f";
+}
+.icon-Vector:before {
+    content: "\e930";
+}
+.icon-Vector-1:before {
+    content: "\e931";
 }
