mobile nav bottom small changes

--- a/styles/icons.css
+++ b/styles/icons.css
@@ -31,12 +31,12 @@
   .icon-Vector-2:before {
     content: "\e901";
   }
-  .icon-Group:before {
+  .icon-Vector-5:before {
     content: "\e902";
   }
   .icon-Vector-1:before {
     content: "\e903";
   }
-  .icon-Vector:before {
+  .icon-Vector-4:before {
     content: "\e904";
   }
