--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,9 @@
     }
 }
 
-
+.linear-gradient-180{
+    background: linear-gradient(180deg,rgba(255,255,255,1) 50%,rgba(246,246,246,1) 50%);
+}
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
