--- a/styles/carCheckIcon.css
+++ b/styles/carCheckIcon.css
@@ -1,19 +1,19 @@
 @font-face {
-    font-family: 'dokhtaroon';
-    src:  url('../public/assets/fonts/icomoon.eot?gu585w');
-    src:  url('../public/assets/fonts/icomoon.eot?gu585w#iefix') format('embedded-opentype'),
-    url('../public/assets/fonts/icomoon.ttf?gu585w') format('truetype'),
-    url('../public/assets/fonts/icomoon.woff?gu585w') format('woff'),
-    url('../public/assets/fonts/icomoon.svg?gu585w#dokhtaroon') format('svg');
+    font-family: 'carcheck';
+    src:  url('../public/assets/fonts/carcheck.eot?gu585w');
+    src:  url('../public/assets/fonts/carcheck.eot?gu585w#iefix') format('embedded-opentype'),
+    url('../public/assets/fonts/carcheck.ttf?gu585w') format('truetype'),
+    url('../public/assets/fonts/carcheck.woff?gu585w') format('woff'),
+    url('../public/assets/fonts/carcheck.svg?gu585w#dokhtaroon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
 }
 
 
-[class^="icon-"], [class*=" icon-"] {
+i {
     /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
+    font-family: 'carcheck' !important;
     speak: never;
     font-style: normal;
     font-weight: normal;
@@ -26,195 +26,172 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-Calender-1:before {
+.cc-calling:before {
     content: "\e900";
 }
-.icon-Discount-Shape-2:before {
+.cc-car:before {
     content: "\e901";
 }
-.icon-Logout:before {
+.cc-vector-stroke:before {
     content: "\e902";
 }
-.icon-Menu-Kebab:before {
+.cc-menu-kebab:before {
     content: "\e903";
+    color: #2d264b;
 }
-.icon-Bookmark-2:before {
+.cc-search:before {
     content: "\e904";
 }
-.icon-Buy-3:before {
+.cc-car-o:before {
     content: "\e905";
 }
-.icon-Close:before {
+.cc-copy:before {
     content: "\e906";
 }
-.icon-Delete-2:before {
+.cc-document-cloud:before {
     content: "\e907";
 }
-.icon-Left-3:before {
+.cc-calender:before {
     content: "\e908";
 }
-.icon-Message-26:before {
-    content: "\e909";
-}
-.icon-Profile-Circle:before {
-    content: "\e90a";
-}
-.icon-Profile-Octagon:before {
-    content: "\e90b";
-}
-.icon-Right-3:before {
-    content: "\e90c";
-}
-.icon-Tick:before {
-    content: "\e90d";
-}
-.icon-Calender-11:before {
-    content: "\e90e";
-}
-.icon-Calender-2:before {
-    content: "\e90f";
-}
-.icon-Location-Tick:before {
-    content: "\e910";
-}
-.icon-Location-Tick-1:before {
-    content: "\e911";
-}
-.icon-arrow-down:before {
-    content: "\e912";
-}
-.icon-arrow-right:before {
+.cc-discount-shape:before {
     content: "\e913";
 }
-.icon-arrow-up:before {
-    content: "\e914";
-}
-.icon-close-circle:before {
+.cc-logout:before {
     content: "\e915";
 }
-.icon-discount-shape:before {
+.cc-bookmark:before {
     content: "\e916";
 }
-.icon-edit-2:before {
+.cc-buy:before {
     content: "\e917";
 }
-.icon-heart:before {
+.cc-left:before {
     content: "\e918";
 }
-.icon-home:before {
+.cc-message:before {
     content: "\e919";
 }
-.icon-like:before {
+.cc-profile-circle:before {
     content: "\e91a";
 }
-.icon-link:before {
+.cc-profile-octagon:before {
     content: "\e91b";
 }
-.icon-link-1:before {
+.cc-rght:before {
     content: "\e91c";
 }
-.icon-login:before {
+.cc-show:before {
     content: "\e91d";
 }
-.icon-menu:before {
+.cc-tick:before {
     content: "\e91e";
 }
-.icon-smart-car:before {
+.cc-wallet:before {
     content: "\e91f";
 }
-.icon-star:before {
+.cc-calender-o:before {
     content: "\e920";
 }
-.icon-star-1:before {
-    content: "\e921";
-}
-.icon-timer:before {
+.cc-close-circle:before {
     content: "\e922";
 }
-.icon-undo:before {
+.cc-document-align-right:before {
     content: "\e923";
 }
-.icon-user-edit:before {
+.cc-edit:before {
     content: "\e924";
 }
-.icon-calendar:before {
+.cc-filter:before {
     content: "\e925";
 }
-.icon-call-calling:before {
-    content: "\e926";
-}
-.icon-dislike:before {
+.cc-location-tik:before {
     content: "\e927";
 }
-.icon-location-slash:before {
+.cc-add:before {
     content: "\e928";
 }
-.icon-messages-2:before {
+.cc-arrow-down:before {
     content: "\e929";
 }
-.icon-messages-2-1:before {
+.cc-arrow-right:before {
     content: "\e92a";
 }
-.icon-search-normal:before {
+.cc-arrow-up:before {
     content: "\e92b";
 }
-.icon-sms:before {
-    content: "\e92c";
-}
-.icon-truck-tick:before {
-    content: "\e92d";
-}
-.icon-user:before {
+.cc-discount-shape-o:before {
     content: "\e92e";
 }
-.icon-Car:before {
-    content: "\e92f";
+.cc-gallery:before {
+    content: "\e930";
 }
-.icon-Frame-48102369:before {
-    content: "\e931";
-}
-.icon-Frame:before {
+.cc-link:before {
     content: "\e932";
 }
-.icon-Group:before {
+.cc-location:before {
     content: "\e933";
 }
-.icon-Icons:before {
+.cc-login:before {
     content: "\e934";
 }
-.icon-Icons-1:before {
+.cc-menu:before {
     content: "\e935";
 }
-.icon-like-1-2:before {
+.cc-messages:before {
     content: "\e936";
 }
-.icon-mdi_google:before {
+.cc-smart-car:before {
     content: "\e937";
 }
-.icon-mdi_google-1:before {
+.cc-star:before {
     content: "\e938";
 }
-.icon-mdi_google-2:before {
+.cc-star-o:before {
     content: "\e939";
 }
-.icon-mdi_google-3:before {
+.cc-timer:before {
     content: "\e93a";
 }
-.icon-mdi_google-4:before {
+.cc-undo:before {
     content: "\e93b";
 }
-.icon-mdi_google-5:before {
+.cc-user-edit:before {
     content: "\e93c";
 }
-.icon-mdi_google-6:before {
-    content: "\e93d";
+.cc-calendar:before {
+    content: "\e909";
 }
-.icon-share-1:before {
-    content: "\e93e";
+.cc-dislike:before {
+    content: "\e90a";
 }
-.icon-Vector-Stroke:before {
-    content: "\e93f";
+.cc-location-slash:before {
+    content: "\e90b";
 }
-.icon-Vector:before {
-    content: "\e940";
+.cc-sms:before {
+    content: "\e90c";
+}
+.cc-user:before {
+    content: "\e90d";
+}
+.cc-telegram:before {
+    content: "\e90e";
+}
+.cc-facebook:before {
+    content: "\e90f";
+}
+.cc-whatsapp:before {
+    content: "\e910";
+}
+.cc-twitter:before {
+    content: "\e911";
+}
+.cc-share:before {
+    content: "\e912";
+}
+.cc-sort_down:before {
+    content: "\e914";
+}
+.cc-call:before {
+    content: "\e926";
 }
