--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,74 +33,74 @@ input[type=number] {
 }
 
 @font-face {
-    font-family: YekanBakh;
-    src: url(../public/assets/fonts/webfonts/woff/YekanBakh-Thin.woff) format("woff"),
-      url(../public/assets/fonts/ttf/YekanBakh-Thin.ttf) format("truetype"),
-      url(../public/assets/fonts/otf/YekanBakh-Thin.otf) format("otf"),
-      url(../public/assets/fonts/webfonts/woff2/YekanBakh-Thin.woff2) format("woff2");
+    font-family: YekanBakhFaNum;
+    src: url(../public/assets/fonts/webfonts/woff/YekanBakhFaNum-Thin.woff) format("woff"),
+      url(../public/assets/fonts/ttf/YekanBakhFaNum-Thin.ttf) format("truetype"),
+      url(../public/assets/fonts/otf/YekanBakhFaNum-Thin.otf) format("otf"),
+      url(../public/assets/fonts/webfonts/woff2/YekanBakhFaNum-Thin.woff2) format("woff2");
     font-weight: 200;
     font-style: normal;
   }
   @font-face {
-    font-family: YekanBakh;
-    src: url(../public/assets/fonts/webfonts/woff/YekanBakh-Light.woff) format("woff"),
-      url(../public/assets/fonts/ttf/YekanBakh-Light.ttf) format("truetype"),
-      url(../public/assets/fonts/otf/YekanBakh-Light.otf) format("otf"),
-      url(../public/assets/fonts/webfonts/woff2/YekanBakh-Light.woff2) format("woff2");
+    font-family: YekanBakhFaNum;
+    src: url(../public/assets/fonts/webfonts/woff/YekanBakhFaNum-Light.woff) format("woff"),
+      url(../public/assets/fonts/ttf/YekanBakhFaNum-Light.ttf) format("truetype"),
+      url(../public/assets/fonts/otf/YekanBakhFaNum-Light.otf) format("otf"),
+      url(../public/assets/fonts/webfonts/woff2/YekanBakhFaNum-Light.woff2) format("woff2");
     font-weight: 300;
     font-style: normal;
   }
   @font-face {
-    font-family: YekanBakh;
-    src: url(../public/assets/fonts/webfonts/woff/YekanBakh-Regular.woff) format("woff"),
-      url(../public/assets/fonts/ttf/YekanBakh-Regular.ttf) format("truetype"),
-      url(../public/assets/fonts/otf/YekanBakh-Regular.otf) format("otf"),
-      url(../public/assets/fonts/webfonts/woff2/YekanBakh-Regular.woff2) format("woff2");
+    font-family: YekanBakhFaNum;
+    src: url(../public/assets/fonts/webfonts/woff/YekanBakhFaNum-Regular.woff) format("woff"),
+      url(../public/assets/fonts/ttf/YekanBakhFaNum-Regular.ttf) format("truetype"),
+      url(../public/assets/fonts/otf/YekanBakhFaNum-Regular.otf) format("otf"),
+      url(../public/assets/fonts/webfonts/woff2/YekanBakhFaNum-Regular.woff2) format("woff2");
     font-weight: 400;
     font-style: normal;
   }
   @font-face {
-    font-family: YekanBakh;
-    src: url(../public/assets/fonts/webfonts/woff/YekanBakh-SemiBold.woff) format("woff"),
-      url(../public/assets/fonts/ttf/YekanBakh-SemiBold.ttf) format("truetype"),
-      url(../public/assets/fonts/otf/YekanBakh-SemiBold.otf) format("otf"),
-      url(../public/assets/fonts/webfonts/woff2/YekanBakh-SemiBold.woff2) format("woff2");
+    font-family: YekanBakhFaNum;
+    src: url(../public/assets/fonts/webfonts/woff/YekanBakhFaNum-SemiBold.woff) format("woff"),
+      url(../public/assets/fonts/ttf/YekanBakhFaNum-SemiBold.ttf) format("truetype"),
+      url(../public/assets/fonts/otf/YekanBakhFaNum-SemiBold.otf) format("otf"),
+      url(../public/assets/fonts/webfonts/woff2/YekanBakhFaNum-SemiBold.woff2) format("woff2");
     font-weight: 500;
     font-style: normal;
   }
   @font-face {
-    font-family: YekanBakh;
-    src: url(../public/assets/fonts/webfonts/woff/YekanBakh-Bold.woff) format("woff"),
-      url(../public/assets/fonts/ttf/YekanBakh-Bold.ttf) format("truetype"),
-      url(../public/assets/fonts/otf/YekanBakh-Bold.otf) format("otf"),
-      url(../public/assets/fonts/webfonts/woff2/YekanBakh-Bold.woff2) format("woff2");
+    font-family: YekanBakhFaNum;
+    src: url(../public/assets/fonts/webfonts/woff/YekanBakhFaNum-Bold.woff) format("woff"),
+      url(../public/assets/fonts/ttf/YekanBakhFaNum-Bold.ttf) format("truetype"),
+      url(../public/assets/fonts/otf/YekanBakhFaNum-Bold.otf) format("otf"),
+      url(../public/assets/fonts/webfonts/woff2/YekanBakhFaNum-Bold.woff2) format("woff2");
     font-weight: 600;
     font-style: normal;
   }
   @font-face {
-    font-family: YekanBakh;
-    src: url(../public/assets/fonts/webfonts/woff/YekanBakh-ExtraBold.woff) format("woff"),
-      url(../public/assets/fonts/ttf/YekanBakh-ExtraBold.ttf) format("truetype"),
-      url(../public/assets/fonts/otf/YekanBakh-ExtraBold.otf) format("otf"),
-      url(../public/assets/fonts/webfonts/woff2/YekanBakh-ExtraBold.woff2) format("woff2");
+    font-family: YekanBakhFaNum;
+    src: url(../public/assets/fonts/webfonts/woff/YekanBakhFaNum-ExtraBold.woff) format("woff"),
+      url(../public/assets/fonts/ttf/YekanBakhFaNum-ExtraBold.ttf) format("truetype"),
+      url(../public/assets/fonts/otf/YekanBakhFaNum-ExtraBold.otf) format("otf"),
+      url(../public/assets/fonts/webfonts/woff2/YekanBakhFaNum-ExtraBold.woff2) format("woff2");
     font-weight: 700;
     font-style: normal;
   }
   @font-face {
-    font-family: YekanBakh;
-    src: url(../public/assets/fonts/webfonts/woff/YekanBakh-Black.woff) format("woff"),
-      url(../public/assets/fonts/ttf/YekanBakh-Black.ttf) format("truetype"),
-      url(../public/assets/fonts/otf/YekanBakh-Black.otf) format("otf"),
-      url(../public/assets/fonts/webfonts/woff2/YekanBakh-Black.woff2) format("woff2");
+    font-family: YekanBakhFaNum;
+    src: url(../public/assets/fonts/webfonts/woff/YekanBakhFaNum-Black.woff) format("woff"),
+      url(../public/assets/fonts/ttf/YekanBakhFaNum-Black.ttf) format("truetype"),
+      url(../public/assets/fonts/otf/YekanBakhFaNum-Black.otf) format("otf"),
+      url(../public/assets/fonts/webfonts/woff2/YekanBakhFaNum-Black.woff2) format("woff2");
     font-weight: 800;
     font-style: normal;
   }
   @font-face {
-    font-family: YekanBakh;
-    src: url(../public/assets/fonts/webfonts/woff/YekanBakh-ExtraBlack.woff) format("woff"),
-      url(../public/assets/fonts/ttf/YekanBakh-ExtraBlack.ttf) format("truetype"),
-      url(../public/assets/fonts/otf/YekanBakh-ExtraBlack.otf) format("otf"),
-      url(../public/assets/fonts/webfonts/woff2/YekanBakh-ExtraBlack.woff2) format("woff2");
+    font-family: YekanBakhFaNum;
+    src: url(../public/assets/fonts/webfonts/woff/YekanBakhFaNum-ExtraBlack.woff) format("woff"),
+      url(../public/assets/fonts/ttf/YekanBakhFaNum-ExtraBlack.ttf) format("truetype"),
+      url(../public/assets/fonts/otf/YekanBakhFaNum-ExtraBlack.otf) format("otf"),
+      url(../public/assets/fonts/webfonts/woff2/YekanBakhFaNum-ExtraBlack.woff2) format("woff2");
     font-weight: 900;
     font-style: normal;
   }
@@ -109,7 +109,7 @@ input[type=number] {
 
 
 body, .Toastify__toast-body {
-    font-family: "YekanBakh";
+    font-family: "YekanBakhFaNum";
 }
 
 li {
