--- a/styles/globals.css
+++ b/styles/globals.css
@@ -219,6 +219,59 @@ li {
 
 }
 
+/************************* home_banner_slider *****************************/
+
+.home_banner_slider .swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.home_banner_slider .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home_banner_slider .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.home_banner_slider .swiper-pagination-bullet {
+    background-color: #5D697A;
+    opacity: 1 !important;
+    width: 14px;
+    height: 14px;
+    border-radius: 50px !important;
+    transition: all .3s ease-in;
+
+}
+
+.home_banner_slider .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: #F66B34;
+    border-radius: 20px !important;
+    width: 40px;
+    transition: all .3s ease-in;
+}
+
+.batteries .swiper-slide{
+    width: 90px !important;
+    height: 90px !important;
+}
+
+.home_banner_slider .swiper-button-next::after, .home_banner_slider .swiper-button-prev::after {
+    color: #eee;
+    padding: 5px;
+    font-size: 20px;
+
+}
+
 /*******************************leaflet map in address_Map ******************************************/
 
 .address_Map .leaflet-container {
