add the display: none to the .leaflet-control-attribution className

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -125,6 +125,11 @@ li {
     scrollbar-width: none;
 }
 
+/********************* hide leaflet logo ***********************/
+
+.leaflet-control-attribution{
+    display: none;
+}
 
 /********************** discount_slider ************************/
 
