change page direction

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -397,7 +397,7 @@ li {
     background: #555;
 }
 
-/*************************** show product shadow text when close accordion *******************************/
+/*************************** show products shadow text when close accordion *******************************/
 
 .divShowProduct {
     background-color: white;
