--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url('./icons.css');
+@import url('./checkBox.css');
 
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
