--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,10 @@
 @import url('./icons.css');
 @import url('./checkBox.css');
 
+*{
+  box-sizing: border-box;
+}
+
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
