add the Toastify class

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -501,6 +501,11 @@ li {
     }
   }
 
+  /************************* toastify **************************/
+
+  .Toastify{
+      z-index: 20000;
+  }
 
   /************************ checkBox **************************/
 
