--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,13 +83,13 @@ input[type=number] {
 }
 @keyframes run {
   0% {
-    left: 100%;
+    right: 0;
   }
   50% {
-    left: 50%;
+    right: -50%;
   }
   100% {
-    left: 100%;
+    right: 0;
   }
 } */
 
