change slider css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -153,7 +153,7 @@ li {
 .hide_scrollbar::-webkit-scrollbar {
     display: none;
 }
-  
+
 .hide_scrollbar {
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -282,11 +282,23 @@ li {
     object-fit: cover;
 }
 
+.home_banner_slider .swiper-pagination{
+    background-color: #FBFBFB;
+    width: 140px !important;
+    height: 30px !important;
+    margin: auto !important;
+    padding-top: 2px !important;
+    right: 0 !important;
+    bottom: 0 !important;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+}
+
 .home_banner_slider .swiper-pagination-bullet {
-    background-color: #5D697A;
+    background-color: #D9D9D9;
     opacity: 1 !important;
-    width: 14px;
-    height: 14px;
+    width: 7px;
+    height: 7px;
     border-radius: 50px !important;
     transition: all .3s ease-in;
 
@@ -295,7 +307,7 @@ li {
 .home_banner_slider .swiper-pagination-bullet.swiper-pagination-bullet-active {
     background-color: #F66B34;
     border-radius: 20px !important;
-    width: 40px;
+    width: 20px;
     transition: all .3s ease-in;
 }
 
@@ -411,21 +423,21 @@ li {
 ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
-    
+
 }
- 
+
 /* Track */
 ::-webkit-scrollbar-track {
-   
+
     border-radius: 5px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: #333;
     border-radius: 5px;
 }
- 
+
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
@@ -516,7 +528,7 @@ li {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
   }
-  
+
   .home_paralox_slider .parallax-bg {
     position: absolute;
     right: 0;
@@ -530,7 +542,7 @@ li {
 
   @media (max-width: 768px) {
     .ArticleSlider{
-        padding: 16px !important; 
+        padding: 16px !important;
     }
   }
 
